Errata form: stop option from jumping between columns

--- a/src/app/pages/errata/form/form.scss
+++ b/src/app/pages/errata/form/form.scss
@@ -33,6 +33,7 @@ $table-dark-row: #f6f6f6;
     label {
         color: $label-4;
         display: block;
+        height: 4.2rem;
         line-height: 2;
         margin: 0;
         padding-left: 2rem;
